# tgo

./: .env.example  .gitignore  README.md  README_CN.md  README_JP.md  README_RU.md  README_TC.md  bootstrap.sh  bootstrap_cn.sh  build-bootstrap.sh  docker-compose.cn.yml  docker-compose.yml  tgo.sh
.githooks/: README.md  pre-commit
.github/workflows/: build-and-push.yml
docs/: BOOTSTRAP_BUILD_SYSTEM.md  BOOTSTRAP_CN_GUIDE.md  BOOTSTRAP_REFACTORING_SUMMARY.md  CN_MIRROR_GUIDE.md  DOMAIN_CONFIG_GUIDE.md  DOMAIN_CONFIG_IMPLEMENTATION.md  DOMAIN_CONFIG_QUICK_REFERENCE.md  DOMAIN_CONFIG_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  MULTI_ARCH_AND_BOOTSTRAP_FIX_SUMMARY.md  MULTI_ARCH_SUPPORT.md  NGINX_CERTBOT_REFACTOR.md  PORT_EXPOSURE_IMPLEMENTATION_SUMMARY.md  PORT_EXPOSURE_QUICK_START.md  PORT_EXPOSURE_STRATEGY.md  SSL_AUTO_RENEWAL_SETUP.md
docs-site/: docusaurus.config.ts
docs-site/src/css/: custom.css
docs-site/src/pages/: index.tsx
docs-site/src/theme/: Root.tsx
envs.docker/: tgo-web.env
repos/tgo-ai/: .dockerignore
repos/tgo-ai/app/models/: llm_provider.py
repos/tgo-ai/migrations/versions/: 0002_remove_llm_provider_alias_unique.py  63a1fb41b4bb_increase_api_key_length.py
repos/tgo-api/: .gitignore  pyproject.toml
repos/tgo-api/alembic/versions/: 0017_ai_provider_key_len.py
repos/tgo-api/app/api/v1/endpoints/: ai_runs.py  chat.py  conversations.py  setup.py  staff.py  visitors.py
repos/tgo-api/app/core/: security.py
repos/tgo-api/app/models/: ai_provider.py
repos/tgo-api/app/services/: platform_type_seed.py  run_registry.py
repos/tgo-api/app/services/kafka_consumers/: ai_processor.py
repos/tgo-platform/: .gitignore
repos/tgo-rag/: .dockerignore
repos/tgo-web/: .dockerignore  package.json
repos/tgo-web/docs/: api.json
repos/tgo-web/public/sounds/: README.md
repos/tgo-web/src/components/: WebSocketManager.tsx
repos/tgo-web/src/data/: mockWorkflows.ts
repos/tgo-web/src/hooks/: useAgentForm.ts  useChannelDisplay.ts  useNotification.ts
repos/tgo-widget-app/: .dockerignore  package.json  tsconfig.tsbuildinfo
repos/tgo-widget-app/src/: App.tsx  main.tsx
repos/tgo-workflow/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
repos/tgo-workflow/alembic/: env.py
repos/tgo-workflow/app/: config.py  database.py  main.py
repos/tgo-workflow/app/api/: executions.py  workflows.py
repos/tgo-workflow/app/core/: logging.py
repos/tgo-workflow/app/engine/: context.py  executor.py  graph.py
repos/tgo-workflow/app/engine/nodes/: __init__.py  agent.py  api.py  base.py  classifier.py  condition.py  end.py  llm.py  registry.py  start.py  tool.py
repos/tgo-workflow/app/integrations/: http_client.py  llm_provider.py  main_system.py
repos/tgo-workflow/app/models/: execution.py  workflow.py
repos/tgo-workflow/app/schemas/: execution.py  node.py  workflow.py
repos/tgo-workflow/app/services/: validation_service.py  workflow_service.py
repos/tgo-workflow/celery_app/: celery.py  tasks.py
repos/tgo-workflow/tests/: conftest.py
repos/tgo-workflow/tests/integration/: test_api.py  test_executor.py
repos/tgo-workflow/tests/unit/: test_context.py  test_graph.py  test_validation.py
scripts/: demo-domain-config.sh  generate-nginx-config.sh  renew-ssl.sh  setup-ssl.sh  test-domain-config.sh  test-port-exposure.sh
(+86 files in other folders)
