[tool.poetry]
name = "tgo-workflow"
version = "0.1.0"
description = "AI Agent Workflow Engine"
authors = ["TGO Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
openai = "^1.12.0"
anthropic = "^0.17.0"
python-multipart = "^0.0.9"
simpleeval = "^0.9.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

